--- a/source/layout.erb
+++ b/source/layout.erb
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
-    <%= stylesheet_link_tag 'homepage.css' %>
+    <meta content='width=device-width' name='viewport'>
+    <%= stylesheet_link_tag 'homepage' %>
   </head>
   <body>
     
