--- a/source/localizable/blog/index.html.erb
+++ b/source/localizable/blog/index.html.erb
@@ -12,10 +12,10 @@ layout: blog_layout
 <% end %>
 
 <% blog.local_articles.each_with_index do |article, i| %>
-  <h2><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></h2>
+  <h2><%= link_to article.title, article %></h2>
+  <p><%= article.date.strftime('%b %e') %></p>
   <!-- use article.summary(250) if you have Nokogiri available to show just
   the first 250 characters -->
-  <%= article.lang %>
   <%= article.body %>
 <% end %>
 
