--- a/source/layouts/blog_layout.erb
+++ b/source/layouts/blog_layout.erb
@@ -9,31 +9,39 @@
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
   </head>
   <body>
+    <div id="head">
+    </div>
+    <div class='gradient'>
+    </div>
     <div id="banner">
       <h1><%= t(:title) %></h1>
     </div>
     <div id="wrap"> 
       <aside id="aside" class='rounded'>
-        <h2><%= t(:recent_articles) %></h2>
-        <ol>
-          <% blog.local_articles[0...10].each do |article| %>
-            <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
-          <% end %>
-        </ol>
-  
-        <h2><%= t(:tags) %></h2>
-        <ol>
-          <% blog.tags.each do |tag, articles| %>
-            <li><%= link_to tag, tag_path(tag) %> (<%= articles.size %>)</a></li>
-          <% end %>
-        </ol>
-  
-        <h2><%= t(:by_year) %></h2>
-        <ol>
-          <% blog.local_articles.group_by {|a| a.date.year }.each do |year, articles| %>
-            <li><%= link_to year, blog_year_path(year) %> (<%= articles.size %>)</a></li>
-          <% end %>
-        </ol>
+        <div class="bg">
+          <h2><%= t(:recent_articles) %></h2>
+          <ol>
+            <% blog.local_articles[0...10].each do |article| %>
+              <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
+            <% end %>
+          </ol>
+        </div>
+        <div class="bg">
+          <h2><%= t(:tags) %></h2>
+          <ol>
+            <% blog.tags.each do |tag, articles| %>
+              <li><%= link_to tag, tag_path(tag) %> (<%= articles.size %>)</a></li>
+            <% end %>
+          </ol>
+        </div>
+        <div class="bg">
+          <h2><%= t(:by_year) %></h2>
+          <ol>
+            <% blog.local_articles.group_by {|a| a.date.year }.each do |year, articles| %>
+              <li><%= link_to year, blog_year_path(year) %> (<%= articles.size %>)</a></li>
+            <% end %>
+          </ol>
+        </div>
       </aside>
   
       <div id="main" role="main">
@@ -42,8 +50,8 @@
         </div>
       </div>
     </div>
-    <div id="footer">
+    <!--div id="footer">
       <div>Cimu Ltd.</div>
-    </div>
+    </div -->
   </body>
 </html>
