--- a/source/layouts/blog_layout.erb
+++ b/source/layouts/blog_layout.erb
@@ -5,6 +5,14 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <meta content='width=device-width' name='viewport'>
     <%= stylesheet_link_tag 'homepage' %>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+    <!--[if lt IE 9]>
+      <script type="text/javascript" src="/javascripts/PIE_IE678.js"></script>
+    <![endif]-->
+    <!--[if IE 9]>
+      <script type="text/javascript" src="/javascripts/PIE_IE9.js"></script>
+    <![endif]-->
+    <script src="/javascripts/base.js"></script>
     <title><%= t(:title) + ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
   </head>
@@ -17,7 +25,7 @@
       <h1><%= t(:title) %></h1>
     </div>
     <div id="wrap"> 
-      <aside id="aside" class='rounded'>
+      <div id="aside">
         <div class="bg">
           <h2><%= t(:recent_articles) %></h2>
           <ol>
@@ -42,7 +50,7 @@
             <% end %>
           </ol>
         </div>
-      </aside>
+      </div>
   
       <div id="main" role="main">
         <div id="content">
