--- a/source/layouts/article_layout.erb
+++ b/source/layouts/article_layout.erb
@@ -22,55 +22,42 @@
     <div class='gradient'>
     </div>
     <div id="banner">
-      <h1><%= t(:title) %></h1>
     </div>
-    <div id="wrap"> 
-      <div id="aside">
-        <div class="bg">
-          <h2><%= t(:recent_articles) %></h2>
-          <ol>
-            <% blog.local_articles[0...10].each do |article| %>
-              <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
-            <% end %>
-          </ol>
-        </div>
-        <div class="bg">
-          <h2><%= t(:tags) %></h2>
-          <ol>
-            <% blog.tags.each do |tag, articles| %>
-              <li><%= link_to tag, tag_path(tag) %> (<%= articles.size %>)</a></li>
-            <% end %>
-          </ol>
-        </div>
-        <div class="bg">
-          <h2><%= t(:by_year) %></h2>
-          <ol>
-            <% blog.local_articles.group_by {|a| a.date.year }.each do |year, articles| %>
-              <li><%= link_to year, blog_year_path(year) %> (<%= articles.size %>)</a></li>
-            <% end %>
-          </ol>
-        </div>
-      </div>
+    <div id="wrap">
+      <%= partial "sidebar" %>
   
       <div id="main" role="main">
-        <div id="content">
-          <%= yield %>
-          
-          <div id="disqus_thread"></div>
-          <script type="text/javascript">
-          	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-          	var disqus_shortname = 'runestonekeeper'; // required: replace example with your forum shortname
-          
-          	/* * * DON'T EDIT BELOW THIS LINE * * */
-          	(function() {
-          		var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-          		dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-          		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-          	})();
-          </script>
-          <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-          <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+        <div id="container">
+          <div id="content">
+            <div id="article">
+              <div class="inner_border">
+                 <div id='top_left'></div>
+                 <div id='top_right'></div>
+                 <div id='bottom_left'></div>
+                 <div id='bottom_right'></div>
+                 <div id='article_body'>
+                    <%= yield %>
+                    
+                    <div id="disqus_thread"></div>
+                    <script type="text/javascript">
+                      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                      var disqus_shortname = 'runestonekeeper'; // required: replace example with your forum shortname
+                    
+                      /* * * DON'T EDIT BELOW THIS LINE * * */
+                      (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                      })();
+                    </script>
+                    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+                </div>
+                
+              </div>
 
+            </div>
+          </div>
         </div>
       </div>
     </div>
