--- a/source/localizable/blog/index.html.erb
+++ b/source/localizable/blog/index.html.erb
@@ -13,11 +13,22 @@ layout: blog_layout
 <% end %>
 
 <% blog.local_articles.each_with_index do |article, i| %>
-  <h2><%= link_to article.title, article %></h2>
-  <p><%= article.date.strftime('%b %e') %></p>
-  <!-- use article.summary(250) if you have Nokogiri available to show just
-  the first 250 characters -->
-  <%= article.body %>
+  <div id="article">
+    <div class="inner_border">
+       <div id='top_left'></div>
+       <div id='top_right'></div>
+       <div id='bottom_left'></div>
+       <div id='bottom_right'></div>
+       <div id='article_body'>
+        <h2><%= link_to article.title, article %></h2>
+        <p class='date'><%= image_tag 'time.png', class: 'icon' %><%= article.date.strftime('%B %e, %Y') %></p>
+        <!-- use article.summary(250) if you have Nokogiri available to show just
+        the first 250 characters -->
+        <%= article.body %>
+      </div>
+      
+    </div>
+  </div>
 <% end %>
 
 <% if paginate %>
