--- a/source/tag.html.erb
+++ b/source/tag.html.erb
@@ -3,24 +3,39 @@ pageable: true
 per_page: 12
 layout: blog_layout
 ---
-<h1>Articles tagged '<%= tagname %>'</h1>
 
-<% if paginate && num_pages > 1 %>
-  <p>Page <%= page_number %> of <%= num_pages %></p>
 
-  <% if prev_page %>
-    <p><%= link_to 'Previous page', prev_page %></p>
-  <% end %>
-<% end %>
+<div id="article">
+  <div class="inner_border">
+     <div id='top_left'></div>
+     <div id='top_right'></div>
+     <div id='bottom_left'></div>
+     <div id='bottom_right'></div>
+     <div id='article_body'>
+     
+     <h1>Articles tagged '<%= tagname %>'</h1>
+     
+     <% if paginate && num_pages > 1 %>
+       <p>Page <%= page_number %> of <%= num_pages %></p>
+     
+       <% if prev_page %>
+         <p><%= link_to 'Previous page', prev_page %></p>
+       <% end %>
+     <% end %>
+     
+      <ul>
+        <% page_articles.each_with_index do |article, i| %>
+          <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
+        <% end %>
+      </ul>
+      
+      <% if paginate %>
+        <% if next_page %>
+          <p><%= link_to 'Next page', next_page %></p>
+        <% end %>
+      <% end %>
+      
+  </div>
+</div>
 
-<ul>
-  <% page_articles.each_with_index do |article, i| %>
-    <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
-  <% end %>
-</ul>
 
-<% if paginate %>
-  <% if next_page %>
-    <p><%= link_to 'Next page', next_page %></p>
-  <% end %>
-<% end %>
