--- a/source/stylesheets/homepage.scss
+++ b/source/stylesheets/homepage.scss
@@ -109,12 +109,12 @@ a:active  { color: $visited-color; }
     
     margin-bottom: 1em;
     
-    ol, ul, li, a {
+    ol, ul, li {
       font-variant:small-caps;
       list-style: none;
       margin: 0;
       padding: 0;
-      color: $link-color;
+      //color: $link-color;
     }
     
     .aside_body
@@ -132,7 +132,7 @@ a:active  { color: $visited-color; }
       h2 {
         padding:        0;
         margin:         0px;
-        margin-bottom:  10px;
+        margin-bottom:  1.5em;
         font-size:      1em;
         line-height:    1em;
         color:          $title-color;
