Add Navbar and new banner

--- a/source/layouts/article_layout.erb
+++ b/source/layouts/article_layout.erb
@@ -22,6 +22,7 @@
     <div class='gradient'>
     </div>
     <div id="banner">
+      <%= partial 'navbar' %>
     </div>
     <div id="wrap">
       <%= partial "sidebar" %>
