--- a/source/stylesheets/homepage.scss
+++ b/source/stylesheets/homepage.scss
@@ -30,6 +30,39 @@ a:visited { color: $visited-color; }
 a:hover   { color: $visited-color; }
 a:active  { color: $visited-color; }
 
+.btn_home {
+
+ display:block;
+ width: image-width('btn_home.png');
+ height: image-height('btn_home.png');
+ background:transparent image-url('btn_home.png') center top no-repeat;
+}
+
+.btn_home:hover {
+   background-image: image-url('btn_home_hover.png');
+}
+
+.btn_blog {
+ display:block;
+ width: image-width('btn_blog.png');
+ height: image-height('btn_blog.png');
+ background:transparent image-url('btn_blog.png') center top no-repeat;
+}
+
+.btn_blog:hover {
+   background-image: image-url('btn_blog_hover.png');
+}
+
+.btn_download {
+ display:block;
+ width: image-width('btn_download.png');
+ height: image-height('btn_download.png');
+ background:transparent image-url('btn_download.png') center top no-repeat;
+}
+
+.btn_download:hover {
+   background-image: image-url('btn_download_hover.png');
+}
 
 .gradient {
   @include background( linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,1)),
@@ -65,7 +98,12 @@ a:active  { color: $visited-color; }
   background-image: image-url('head_tilling.png');
   background-repeat: repeat-x;
   height: image-height('head_tilling.png');
+  
+  z-index: -1;
 }
+
+
+
 
 #banner{
   @include container;
@@ -81,6 +119,21 @@ a:active  { color: $visited-color; }
     padding: 0;
     color: #926A48;
     font-family: "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", "Helvetica Neue", Arial, Helvetica, sans-serif;
+  }
+  
+  #navbar {
+    position: relative;
+    top: image-height('head_pic.png') - 105px;
+    
+    ul, li {
+      padding: 0;
+      margin: 0;
+    }
+    
+    li {
+      float: left;
+      margin: 10px;
+    }
   }
 }
 
@@ -168,7 +221,6 @@ a:active  { color: $visited-color; }
         margin-bottom: 1em;
         
 
-        
         h2 {
           padding: 0;
         }
