--- a/source/layouts/blog_layout.erb
+++ b/source/layouts/blog_layout.erb
@@ -5,6 +5,15 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <!-- meta content='width=device-width' name='viewport' -->
     <%= stylesheet_link_tag 'homepage' %>
+    
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png" />
+    <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png" />
+    <link rel="shortcut icon" href="favicon.png" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />
+    
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <!--[if lt IE 9]>
       <script type="text/javascript" src="/javascripts/PIE_IE678.js"></script>
