Add download url

--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -7,7 +7,7 @@
       	  <%= link_to '', '/blog', class: 'btn_blog' %>
       	</li -->
       	<li style='float:right'>
-      	  <%= link_to '', '#', class: 'btn_download' %>
+      	  <%= link_to '', 'http://pan.baidu.com/s/1eQ65Cky', class: 'btn_download' %>
       	</li>
         </ul>
       </div>
