Remove download link

--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -6,8 +6,8 @@
       	<!--li>
       	  <%= link_to '', '/blog', class: 'btn_blog' %>
       	</li -->
-      	<li style='float:right'>
+<!--       	<li style='float:right'>
       	  <%= link_to '', 'http://runestonekeeper.qiniudn.com/RuneStoneKeeper.rar', class: 'btn_download' %>
-      	</li>
+      	</li> -->
         </ul>
       </div>
